team: moved css styling to style

--- a/index.html
+++ b/index.html
@@ -20,28 +20,12 @@
   html {
     scroll-behavior: smooth;
   }
-  .team-member-img {
-    width: 5rem;
-    height: 5rem;
-    transition: border-color 0.2s, transform 0.3s;
-    border-radius: 9999px;
-    object-fit: cover;
-    border-width: 4px;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    cursor: pointer;
-    border-color: #fff !important;
-    display: block;
-  }
-  .team-member-img:hover {
-    border-color: #f4802e !important;
-    transform: scale(1.2);
-  }
 </style>
 </head>
 <body>
   <body class="main">
   <div class="head relative" id="header">
-  
+   
     <div class="logo pl-6 pr-4 flex items-center">
       <a href="index.html">
         <img src="assets/logo.webp" alt="Hammer Hacks Logo"
@@ -74,7 +58,7 @@
   <div class="homepage">
     <div class="mx-auto w-auto">
         <img src="assets/logo.webp" alt="Hammer Hacks Logo"
-          class="h-50 w-50 my-20 mx-auto" />
+          class="h-100 w-100 my-20 mx-auto" />
        </a>
       <div class="relative bottom-15">
         <h1 class="text-4xl font-bold text-yellow-500">A High School Hackathon where you can present your amazing ideas with technology!</h1>
@@ -104,7 +88,7 @@
     
   </div>
   <div class="FAQ">
-    
+
   </div>
   <div class="team">
     <!-- team section start -->
@@ -145,7 +129,7 @@
             </a>
           </div>
           <div class="flex items-center justify-center">
-            <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.linkedin.com/in/aaron-dam-a798512a5/" target="_blank" rel="noopener noreferrer">
               <img src="assets/AaronDam.jpeg" alt="Member 4" class="team-member-img team-member" data-desc="<strong>Aaron Dam</strong><br>Web Developer. Likes → Rhythm Games & Food 🎵<br>Grade 12 @ Westmount SS" />
             </a>
           </div>
