--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
   <div class="schedule">
     <h2 class="glowing-text text-4xl font-bold text-center">Location and Schedule</h2>
     <div class="relative left-70">
+      <h2 class="">
+        
+      </h2>
       <h2 class="glowing-text text-4xl font-bold">8:00AM - 
         
       </h2>
