--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 
   <div class="schedule">
     <h2 class="glowing-text text-4xl font-bold text-center">Location and Schedule</h2>
+      <h2 class="text-4xl text-center">
+        McMaster University at : 1280 Main St W, Hamilton, ON L8S 4L8
+    </h2>
     <div class="relative left-70">
-      <h2 class="">
-        
-      </h2>
       <h2 class="glowing-text text-4xl font-bold">8:00AM - 
         
       </h2>
