--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
        </a>
       <div class="slide-in relative bottom-15">
         <h1 class="slide-in text-4xl font-bold text-yellow-500">A High School Hackathon where you can present your amazing ideas with technology!</h1>
-        <h1 class="slide-in text-4xl font-bold">??? 2026</h1>
-        <h1 class="slide-in text-4xl font-bold">Location ???</h1>
+        <h1 class="slide-in text-4xl font-bold">winter 2026</h1>
       </div>
 
   
